--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,7 +21,7 @@ jobs:
 
       - name: Get latest calibre version
         id: calibrelatest
-        run: echo "::set-output name=ver::$(curl --retry 2 --silent 'http://code.calibre-ebook.com/latest')"
+        run: echo "::set-output name=ver::$(curl -L --retry 2 --silent 'http://code.calibre-ebook.com/latest')"
 
       - name: Binaries Cache
         id: cache-bin
