--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,7 +30,7 @@ jobs:
         uses: actions/cache@v3
         with:
           path: cache/calibre
-          key: cache-calibre-x86_64-${{ steps.calibrelatest.outputs.ver }}
+          key: cache-calibre-x86_64-${{ env.ver }}
 
       - name: Install calibre
         run: sh .github/workflows/install_calibre.sh
